--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
       display: flex; align-items: center; justify-content: center;
       font-size: 50px;
       animation: avatarPulse 3s ease-in-out infinite;
+      overflow: hidden;
+    }
+    .avatar img {
+      width: 100%; height: 100%; object-fit: cover; border-radius: 50%;
     }
     @keyframes avatarPulse {
       0%,100% { box-shadow: 0 0 0 0 rgba(88,166,255,0.4); }
@@ -316,6 +320,7 @@
       background: rgba(255,255,255,0.02);
       transition: transform 0.2s, border-color 0.2s, box-shadow 0.2s;
       display: flex; flex-direction: column; gap: 8px;
+      text-decoration: none; color: inherit; cursor: pointer;
     }
     .project-card:hover {
       transform: translateY(-4px);
@@ -361,7 +366,7 @@
   <div class="card hero">
     <div class="avatar-wrap">
       <div class="avatar-ring"></div>
-      <div class="avatar">👋</div>
+      <div class="avatar"><img src="https://github.com/cbsingh1.png" alt="Chandra" /></div>
     </div>
     <h1>Chandra Bhan Singh</h1>
     <p class="location">📍 Kuala Lumpur, Malaysia</p>
@@ -568,24 +573,24 @@
   <div class="card">
     <h2 class="section-title">🚀 Projects</h2>
     <div class="project-grid">
-      <div class="project-card">
+      <a class="project-card" href="https://github.com/cbsingh1/spring-framework" target="_blank" rel="noopener">
         <div class="project-icon">🌱</div>
         <div class="project-name">Spring Framework</div>
         <div class="project-desc">Open source contribution to the official Spring Framework project.</div>
         <span class="project-tag">Open Source</span>
-      </div>
-      <div class="project-card">
+      </a>
+      <a class="project-card" href="https://cbsingh1.github.io/my-movie-catalog/" target="_blank" rel="noopener">
         <div class="project-icon">🎬</div>
         <div class="project-name">My Movie Catalog</div>
         <div class="project-desc">Full-stack React app for browsing and managing a personal movie catalog.</div>
         <span class="project-tag">React · Full-Stack</span>
-      </div>
-      <div class="project-card">
+      </a>
+      <a class="project-card" href="https://cbsingh1.github.io/travel-checklist-app/" target="_blank" rel="noopener">
         <div class="project-icon">✈️</div>
         <div class="project-name">Travel Checklist</div>
         <div class="project-desc">React web app for travel planning, deployed via GitHub Pages.</div>
         <span class="project-tag">React · GitHub Pages</span>
-      </div>
+      </a>
     </div>
   </div>
 
